# percy

./: .clang-format  CMakeLists.txt  README.md  readme.md
cmake/: Catch2.cmake  PercyConfig.cmake.in  PercyVariant.cmake
example/: CMakeLists.txt  input.txt
example/include/example/: ast.hpp  expr.hpp  grammar.hpp
example/src/: example.cpp
include/: percy.hpp
include/percy/: input.hpp  input_span.hpp  parser.hpp  result.hpp  rules.hpp  static_input.hpp  type_traits.hpp  utils.hpp  variadic_union.hpp  variant.hpp
tests/: CMakeLists.txt  test_all.cpp
tests/percy/: input.cpp  parser.cpp  result.cpp  static_input.cpp  testing.hpp  type_traits.cpp  utils.cpp  variadic_union.cpp  variant.cpp
